# TempRobot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  VexV5Toolchain.cmake  build.bat  build.ps1  build.sh  makefile  pullcore.sh  pushcore.sh
include/: core.h  robot-config.h  vex.h
include/competition/: autonomous.h  opcontrol.h
src/: main.cpp  robot-config.cpp
src/competition/: autonomous.cpp  opcontrol.cpp
vex/: mkenv.mk  mkrules.mk
